@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.6</version>
+		<version>3.0.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.durys.jakub</groupId>
@@ -14,7 +14,7 @@
 	<name>company-management</name>
 	<description>Company Management</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>20</java.version>
 		<spring-cloud.version>2021.0.4</spring-cloud.version>
 	</properties>
 	<dependencies>
@@ -148,6 +148,11 @@
 			<version>3.0.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
@@ -169,8 +174,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.5.1</version>
 				<configuration>
-					<source>17</source>
-					<target>17</target>
+					<source>20</source>
+					<target>20</target>
 					<annotationProcessorPaths>
 
 						<path>
@@ -195,6 +200,7 @@
 						</path>
 
 					</annotationProcessorPaths>
+					<compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
 			</plugin>
 
